# music-db

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  daily_tasks.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b1c2d3e4f5a6_add_music_db_schema.py  c3d4e5f6a7b8_add_album_art_path.py  d4e5f6a7b8c9_add_persons_and_album_personnel.py  e5f6a7b8c9d0_add_details_and_album_details.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: albums.py  auth.py  collections.py  details.py  enrichment.py  flac_import.py  musicbrainz.py  musicians.py  persons.py  roon_import.py
backend/app/core/: config.py
backend/app/models/: __init__.py  album.py  collection.py  collection_album.py  detail.py  musician.py  person.py  record_label.py  user.py
backend/app/schemas/: album.py  collection.py  detail.py  musician.py  person.py  record_label.py  user.py
backend/app/services/: album.py  auth.py  collection.py  enrichment.py  flac_import.py  musicbrainz.py  roon.py
backend/tests/: conftest.py  test_albums.py  test_auth.py  test_collections.py
frontend/: app.vue  nuxt.config.ts  package.json
frontend/components/: AlbumCard.vue  AlbumForm.vue  AppHeader.vue  CollectionCard.vue  MusicianTagInput.vue  OtherDetailsTagInput.vue  PersonnelTagInput.vue
frontend/composables/: useApi.ts  useMusicBrainz.ts
frontend/middleware/: auth.ts
frontend/pages/: import.vue  index.vue  login.vue  register.vue
frontend/stores/: albums.ts  auth.ts  collections.ts  enrichment.ts  musicians.ts
(+9 files in other folders)
